bug: map not showing up

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -129,7 +129,7 @@ span.m-left{
 }
 
 .about h1,
-.contact h1,
+.contact-section h1,
 .comments h1{
     font-size:10rem;
     z-index: 0;
@@ -164,7 +164,7 @@ span.m-left{
      margin-top:30px;
 }
 
-.about img,
+/* .about img,
 .contact img {
     width: 300px;
     position: relative;
@@ -173,7 +173,7 @@ span.m-left{
     right: 50%;
     transform: translateX(100%);
     border-radius: 50%;
-}
+} */
 
 /*  
 .secret-message{
@@ -311,6 +311,7 @@ div[class^='bar-'] {
 .bar-java {
   width: calc(0 - 6px);
 }
+ */
 
 .contact-me a{
   color:white;
@@ -332,6 +333,8 @@ div[class^='bar-'] {
   justify-content: space-around;
   padding: 40px 20px 40px 20px;
 }
+
+/*  
 
 .contact img {
     opacity: .25;
